0.10_02

* Strip out max_distance testing code in transpositions (was faulty).

0.10_01

* Transpositions (Damerau-Levenshtein edit distance)
* Alphabetization of Unicode strings via bitmap

0.09

Error in documentation and examples regarding the return value of
"nearest" (it should have said the return value is -1 for a miss).

0.08

Alterations for the benefit of unification with CPAN::Nearest.

0.07

This fixes a bug which happens in comparisons of Unicode-encoded
strings with non-Unicode encoded strings.

0.06

This adds a directory of examples to the distribution.
