@@ -206,6 +206,25 @@ and does some fuzzy searches on them. It requires a local copy of the
 file to run. This script demonstrates the use of Unicode searches with
 Text::Fuzzy.
 
+=head1 SUPPORT
+
+=head2 Reporting a bug
+
+There is a bug tracker for the module at
+L<https://github.com/benkasminbullock/Text-Fuzzy/issues>
+
+=head2 Mailing list
+
+There is a mailing list at Google Groups at
+L<https://groups.google.com/group/textfuzzy>
+
+=head2 Testing
+
+The CPAN tester results are at
+L<http://www.cpantesters.org/distro/T/Text-Fuzzy.html>. The
+ActiveState tester results are at
+L<http://code.activestate.com/ppm/Text-Fuzzy/>.
+
 =head1 ACKNOWLEDGEMENTS
 
 The edit distance including transpositions was contributed by Nick
